--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "3.2.5",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start": "webpack serve --open",
+    "build": "webpack --config webpack.prod.js",
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "wa-map-optimizer-vite": "^1.1.13"
+    "@workadventure/iframe-api-typings": "^1.2.1",
+    "eslint": "^7.24.0",
+    "html-webpack-plugin": "^5.3.1",
+    "ts-loader": "^8.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@workadventure/iframe-api-typings": "^1.14.8",
     "@workadventure/scripting-api-extra": "^1.4.6"
   }
 }
