--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "@workadventure/iframe-api-typings": "^1.2.1",
